# crab

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  crab.benchmarks.html  crab.client.html  crab.core.html  crab.core.models.html  crab.environments.html  crab.html  crab.server.controller.html  crab.server.html  genindex.html  index.html  modules.html  multi_env_test.ipynb  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  questions.yml
.github/actions/crab_install/: action.yml
.github/workflows/: documentation.yml  publish_release.yml  pytest_package.yml
_modules/: index.html
_modules/crab/core/: benchmark.html  decorators.html  environment.html  exceptions.html  graph_evaluator.html  task_generator.html
_modules/crab/server/: api.html  config.html  exception_handlers.html  main.html  middleware.html  utils.html
_sources/: crab.benchmarks.rst  crab.core.models.rst  crab.core.rst  crab.environments.rst  crab.rst  crab.server.controller.rst  crab.server.rst  index.rst  modules.rst
_sources/crab_benchmark_v0/: get_started.md
_sources/get_started/: build_your_own_benchmark.md  quickstart.md
crab/: __init__.py
crab-benchmark-v0/: README.md  android_env.py  macos_local.py  main.py  ubuntu_env.py  visual_prompt_actions.py
crab-benchmark-v0/dataset/: android_subtasks.py  handmade_subtasks.py  handmade_tasks.py  ubuntu_subtasks.py
crab-benchmark-v0/dataset/android/: 1005c437-50d1-465a-b3fc-833098b22bfc.json  12333aa0-e76d-4a5c-8657-9f897f62f62d.json  22b04776-8eec-4303-b3f6-9c981f7f29b8.json  2ade6a13-c7a6-4df7-8c62-77382687369e.json  346caf7c-dc74-4c38-962a-aaffb638e0c7.json  379b9c58-5125-41b3-9cc6-ea925c8b094d.json  4190c90c-b28c-4bb3-ab5c-af3c4fde0a3d.json  46d7ccdb-d2e4-4b8a-bead-f2641b5ac23c.json  483fbf9c-dc78-4ac2-9264-53c4f617f6cc.json  4893a9b0-6477-495d-a73c-32503326e24a.json  53010c40-dce4-4d72-a856-842c21059e2b.json  6d9f6395-de79-4ad0-8a2a-2d674f93f293.json  71ef7fd2-0ae3-49c8-8238-06b7aa985d25.json  73f78fc3-1ca5-442d-801f-bc175a0bfb89.json  764838cc-9359-4130-9bb2-4a75900b2d89.json  77289141-e52b-48c8-b3a7-1b29520f3e1e.json  7891ceab-7965-4ddb-a0fc-15740c9a4e44.json  8bd51440-f959-4edc-baa5-cd03d32a5b0f.json  94b1836b-3111-40ad-8d07-b8a57efe7438.json  a225f7f8-6d03-4619-b57d-7a08610030d8.json  b077299d-1acb-40f5-89f3-cc08044345bf.json  b3965b07-4683-4445-9de1-a1dedf6c73ad.json  c1b1cfeb-40e7-49a8-a3f5-b8c8ba723601.json  c85f03c9-83c4-417b-93d9-0d7b41022525.json  cf4c496b-fbbd-4701-91ea-4590fe6a66e1.json  d0811e47-d75f-40ce-b34b-e1ee3c8bed3f.json  d2d456bb-c7d1-46af-8263-78d8509fb320.json  d4e0f2b3-d0ff-4efd-856f-9f5e598cfd05.json  d7489d00-0046-4fb1-af5b-1fde7d87312c.json  d92f6c33-e0a7-4101-957d-e7dd218d2565.json  de843952-df8f-4a26-bae9-d0a32ed9a7f5.json  e20fd121-b981-42da-94de-efcd66889c11.json  e55d7a39-7b6b-4852-8711-844cebc88cb8.json  e9268070-91b7-4e8c-9976-1cf8126ba13b.json  fbe6a1b1-63bb-4d4e-8a53-ff4f7839ef61.json  fc642cb6-5321-4966-afbf-fb3348bb69ee.json
crab-benchmark-v0/dataset/cross/: 05a7633d-b966-471c-8848-e18e69ad265f.json  1e92db38-501e-429b-ac31-453d1af10a25.json  43be6e8e-034d-4277-8346-c4ae7553bf68.json  534be964-269a-4509-b2b8-28cc3ba8dfca.json  6f95cfa1-e7ae-4a82-912b-0180fc9622f2.json  760ed27e-b1bd-451f-8659-bdb9845fcb7f.json  82596760-7d4d-457d-9ca9-9551ab85ec58.json  a956a091-8de4-42ee-b152-913308dfc24b.json  c5929ef3-ac27-4288-b02f-4f261d5871f9.json  da5911e3-1a99-4735-ba3e-f08c5ca81fdd.json
crab-benchmark-v0/dataset/ubuntu/: 05d0e137-7d97-4021-9477-6490a2154c81.json  0a893c2e-eec5-47cc-a930-eb01c5f17683.json  0d178388-8166-4b66-93c1-278861f9897c.json  0d7c84d2-bbbd-46ab-80d1-52b3a44f3858.json  0deafe05-8db5-445f-9031-f6e884569d03.json  0e80fd90-0b23-454f-a629-7b6d7baa7542.json  125f7bae-e931-4190-8737-5f1ea7227772.json  15a150a8-899c-4753-8dc5-05248ccc3640.json  1ebcd710-f73b-4022-832b-167c0d3f55a2.json  22787ecc-52b2-4791-aefb-c45800f51414.json  22f05f6f-6aef-4786-958f-14f559eaf014.json  28963795-d694-4bb4-adaf-f7708a2c6fe5.json  (+66 more)
crab-benchmark-v0/docs/: environment_gcp_setup.md  environment_local_setup.md
crab-benchmark-v0/scripts/: ubuntu_env_init.sh
crab/actions/: android_actions.py  crab_actions.py  desktop_actions.py  file_actions.py  omniparser_visual_actions.py  system_actions.py  visual_prompt_actions.py
crab/agents/: utils.py
crab/benchmarks/: template.py  ubuntu.py
crab/core/: __init__.py  agent_policy.py  backend_model.py  benchmark.py  csv_log.py  decorators.py  environment.py  exceptions.py  experiment.py  graph_evaluator.py  task_generator.py
crab/corev2/: benchmark.py  environment.py  evaluator.py  policy.py  task.py  workflow.py
crab/environments/: android.py  linux.py  macos.py  template.py
crab/envv2/: multi_env.py
crab/server/: api.py  config.py  exception_handlers.py  logger.py  main.py  middleware.py  utils.py
crab/utils/: __init__.py  common.py  encryption.py  measure.py
crab_benchmark_v0/: environment_gcp_setup.html  environment_local_setup.html  get_started.html
docs/: build_your_own_benchmark.md  conf.py  crab.benchmarks.rst  crab.client.rst  get_start_with_benchmark.md  index.rst  visual_actions_comparison.md
docs/crab_benchmark_v0/: environment_gcp_setup.md  environment_local_setup.md  get_started.md
examples/: camel_basic.py  camel_example.py  camel_rag_example.py  desktop_env.py  multi_env.py  single_env.py
get_started/: build_your_own_benchmark.html  quickstart.html
gui/: gui_experiment.py  host_os.py  main.py  utils.py
gui/envs/: __init__.py  android.py  mac.py  ubuntu.py  windows.py
licenses/: license_template.txt  update_license.py
refactor_demo/: demo.py
refactor_demo/core/: benchmark.py  environment.py  evaluator.py  task.py  task_wrapper.py
refactor_demo/envs/: multi_env.py
test/actions/: test_omniparser_visual_actions.py  test_visual_actions_comparison.py  test_visual_prompt_actions.py
test/core/: test_action.py  test_benchmark.py  test_evaluator.py  test_image_handling.py  test_resize_image.py  test_utils.py
test/server/: test_api.py
(+34 files in other folders)
