[build-system]
requires = ["poetry-core>=1.2.0", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "crab-framework"
version = "0.1.2"
description = "Cross-platform Agent Benchmark for Multimodal Embodied Language Model Agents."

authors = ["CAMEL-AI.org"]
maintainers = ["Tianqi Xu <tianqi.xu@kaust.edu.sa>"]

packages = [{ include = "crab" }]

readme = "README.md"
license = "Apache License 2.0"
repository = "https://github.com/camel-ai/crab"

[tool.poetry.dependencies]
python = "^3.10, <3.12"

# core
docstring-parser = "^0"
networkx = "^3"
dill = "^0.3.8"
pydantic = "^2.6"
lxml = "^5.2.2"
openai = "^1.12.0"
cryptography = "^43.0.0"
setuptools = "^73.0.1"
tenacity = "^9.0.0"
gymnasium = "^1.0.0"

# desktop actions
pillow = "^10.2.0"
mss = "^9.0.1"
psutil = "^5.9.8"
pyautogui = "^0.9.3"
pyperclip = "^1.8.2"

# environment
python-vagrant = "^1.0.0"

# evaluation
pyexcel-ods = "^0.6.0"
odfpy = "^1.4.1"
beautifulsoup4 = "^4.12.3"
termcolor = "^2.4.0"
opencv-python = "^4.9.0.80"

# client
httpx = { version = "*", optional = true }

# agent
google-generativeai = { version = "^0.6.0", optional = true }
anthropic = { version = "^0.29.0", optional = true }
groq = { version = "^0.5.0", optional = true }
ollama = { version = "^0.2.0", optional = true }
camel-ai = { version = "^0.2", extras = ["all"], optional = true }

# text ocr
easyocr = { version = "^1.7.1", optional = true }

# visual prompt
transformers = { version = "4.44.1", optional = true }
torch = { version = "^2.4.0", optional = true }

# server
fastapi = { extras = ["all"], version = "0.109.1", optional = true }
pydantic-settings = { version = "^2", optional = true }
uvicorn = { extras = ["standard"], version = "^0.27.0.post1", optional = true }

# radar plot
plotly = { version = "^5.20.0", optional = true }

# types
types-pyautogui = "^0.9.3.20240106"
types-psutil = "^5.9.5.20240205"
types-networkx = "^3.2.1.20240210"

[tool.poetry.extras]
server = ["fastapi", "pydantic-settings", "uvicorn"]
client = [
    "httpx",
    "openai",
    "google-generativeai",
    "anthropic",
    "groq",
    "ollama",
    "easyocr",
    "plotly",
    "torch",
    "torchvision",
    "numpy",
    "opencv-python",
    "transformers",
    "addict",
    "yapf",
    "matplotlib",
    "pycocotools",
    "timm",
]
camel = ["camel-ai"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^8.0.0"
ruff = "^0.6.5"
ipykernel = "^6.29.3"
pandas = "^2.2.2"
sphinx = "^7"
myst-parser = "^4"
sphinx-book-theme = "*"
pre-commit = "^3.7.0"
certifi = "^2024.2.2"

[tool.ruff]
lint.select = ["E501", "E4", "E7", "E9", "F", "I"]
lint.ignore = ["E731"]
exclude = ["docs/"]

[[tool.mypy.overrides]]
module = ["dill", "easyocr", "google.generativeai.*"]
ignore_missing_imports = true
